--- a/src/assets/scss/_user.scss
+++ b/src/assets/scss/_user.scss
@@ -202,8 +202,8 @@
   contain: paint;
 }
 .bg-cover.content-paint{
-  background-image: url(../../assets/img/covers/caroline-attwood-bpPTlXWTOvg-unsplash.jpg);
-  background-position: 0px -180px;
+  background-image: url(../../assets/img/covers/home-bg.jpg);
+  background-position: center -140px;
 }
 @media (max-width: 768px) {
   .avatar-xxl {
@@ -215,7 +215,8 @@
     margin-top: 0;
   }
   .bg-cover.content-paint{
-    background-image: url(../../assets/img/covers/caroline-attwood-bpPTlXWTOvg-unsplash.jpg);
-    background-position: -340px -530px;
+    background-image: url(../../assets/img/covers/home-bg-mobile.jpg);
+    background-position: left top;
+    background-size: 180% auto;
   }
 }
